--- a/app/components/labtest-module/for-labtest/for-labtest.component.html
+++ b/app/components/labtest-module/for-labtest/for-labtest.component.html
@@ -671,7 +671,7 @@
               <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width: 100%">
                 <thead>
                   <tr class="text-light header-bg-color-um system-name">
-                    <th></th>
+                    <th [hidden]="true"></th>
                     <th>Lab Access Code</th>
                     <th>Released By</th>
                     <th>Released Date</th>
@@ -686,7 +686,7 @@
                       | paging: currentPageIndexLabRecordsWithAccessCode:pageSize;
                     let i = index
                   ">
-                  <td><input type="checkbox" [id]="i" ngModel (ngModelChange)="getRowItem(item, $event)"></td>
+                  <td [hidden]="true"><input type="checkbox" [id]="i" ngModel (ngModelChange)="getRowItem(item, $event)"></td>
                   <td>{{ item.lab_access_code }}</td>
                   <td>{{ item.add_access_code_by }}</td>
                   <td>{{ item.add_access_code_date | date: "MM/dd/yyyy"}}</td>
