--- a/app/components/labtest-module/for-labtest/for-labtest.component.html
+++ b/app/components/labtest-module/for-labtest/for-labtest.component.html
@@ -693,7 +693,7 @@
                   <td>{{ item.totalItems }}</td>
                   <td>
                     <button mat-stroked-button class="editbtnStyle" color="black" data-toggle="modal" data-target="#"
-                      data-backdrop="false" data-keyboard="false" title="To Print" (click)="print(item)">
+                    (click)="printresult(item)"data-backdrop="false" data-keyboard="false" title="To Print">
                       <span class="fa fa-print"></span> Print
                     </button>
                     <button mat-stroked-button class="editbtnStyle" color="primary" data-toggle="modal"
