--- a/app/components/labtest-module/for-labtest/for-labtest.component.html
+++ b/app/components/labtest-module/for-labtest/for-labtest.component.html
@@ -791,6 +791,16 @@
         <app-nearly-expiry-items></app-nearly-expiry-items>
       </mat-tab>
 
+      Cancelled lab Transactions
+      <mat-tab>
+        <ng-template mat-tab-label>
+          Cancelled Transaction
+          &nbsp;
+        </ng-template>
+      <h2><b style="background-color: pink; color: red">Ranny Babes Nalang po Bahala</b></h2>
+        <!-- <app-nearly-expiry-items></app-nearly-expiry-items> -->
+      </mat-tab>
+
     </mat-tab-group>
   </div>
 </div>
